<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.extremekod.hotelsny.HotelDetailsActivity">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hotelImageHeight"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pic_ny" />

    <android.support.v7.widget.CardView
        android:id="@+id/cvHotel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivPhoto"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RatingBar
                android:id="@+id/rbStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/normalMargin"
                android:layout_marginTop="@dimen/normalMargin"
                android:isIndicator="true"
                android:numStars="5" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rbStars"
                android:paddingEnd="@dimen/hugePadding"
                android:paddingStart="@dimen/hugePadding"
                android:text="@string/hotelName"
                android:textSize="@dimen/largeTextDetails" />

            <TextView
                android:id="@+id/tvAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:paddingStart="@dimen/hugePadding"
                android:paddingTop="@dimen/topPadding"
                android:text="@string/address"
                android:textSize="@dimen/smallTextDetails" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvName"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tvAddressLabel"
                android:paddingEnd="@dimen/hugePadding"
                android:paddingTop="@dimen/topPadding"
                android:textSize="@dimen/smallTextDetails" />

            <TextView
                android:id="@+id/tvDistanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:paddingStart="@dimen/hugePadding"
                android:paddingTop="@dimen/topPadding"
                android:text="@string/toCenterDetails"
                android:textSize="@dimen/smallTextDetails" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAddress"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/tvDistanceLabel"
                android:paddingEnd="@dimen/hugePadding"
                android:paddingTop="@dimen/topPadding"
                android:textSize="@dimen/smallTextDetails" />

            <TextView
                android:id="@+id/tvSuitesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDistance"
                android:paddingStart="@dimen/hugePadding"
                android:paddingTop="@dimen/topPadding"
                android:text="@string/freelyDetails"
                android:textSize="@dimen/smallTextDetails" />

            <TextView
                android:id="@+id/tvSuites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDistance"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/tvSuitesLabel"
                android:paddingEnd="@dimen/hugePadding"
                android:paddingTop="@dimen/topPadding"
                android:textSize="@dimen/smallTextDetails" />

            <ImageButton
                android:id="@+id/btnMap"
                android:layout_width="@dimen/backButtonSize"
                android:layout_height="@dimen/backButtonSize"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/normalMargin"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:src="@drawable/pic_ic_map"
                android:background="@color/colorTransparent"
                android:alpha="0.6"/>

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="@dimen/backButtonSize"
                android:layout_height="@dimen/backButtonSize"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/normalMargin"
                android:onClick="onClick"
                android:scaleType="fitCenter"
                android:src="@drawable/pic_ic_revert"
                android:background="@color/colorTransparent"
                android:alpha="0.6"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
